--- a/public/troop-documents/index.html
+++ b/public/troop-documents/index.html
@@ -1,1 +1,278 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Troop Documents — Troop 248</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Use the same CSS again (copy from Scoutmaster page) -->
+  <style>
+    /* copy the exact same CSS from the Scoutmaster page here */
+  </style>
+</head>
+<body>
+  <!-- FULLSCREEN LOGIN -->
+  <div id="auth-overlay">
+    <div class="auth-card">
+      <div class="auth-card-header">
+        <h1>Troop Portal</h1>
+        <p>Sign in to access troop documents.</p>
+      </div>
+      <div class="auth-fields">
+        <div>
+          <label for="email-input">Email</label>
+          <input type="email" id="email-input" placeholder="you@example.com" />
+        </div>
+        <div>
+          <label for="password-input">Password</label>
+          <input type="password" id="password-input" placeholder="Password" />
+        </div>
+      </div>
+      <div class="auth-buttons">
+        <button id="login-btn">Log In</button>
+        <button id="signup-btn">Sign Up</button>
+      </div>
+      <div class="auth-note">
+        New accounts are viewers. An adult leader can mark your account as admin.
+      </div>
+    </div>
+  </div>
 
+  <!-- APP SHELL -->
+  <div id="app-shell">
+    <header>
+      <div>
+        <h2>Troop 248</h2>
+      </div>
+
+      <nav>
+        <a href="/calendar/">Calendar</a>
+        <a href="/scoutmaster/">Scoutmaster Blog</a>
+        <a href="/spl/">SPL Blog</a>
+        <a href="/documents/">Troop Documents</a>
+      </nav>
+
+      <div id="auth-bar">
+        <div id="auth-info">Signed in as …</div>
+        <button id="logout-btn">Log Out</button>
+      </div>
+    </header>
+
+    <main>
+      <div class="welcome-card">
+        <div>
+          <h3>Troop Documents</h3>
+          <p>Find permission slips, packing lists, and other important files.</p>
+        </div>
+        <div id="role-badge-container">
+          <span class="badge">Viewer</span>
+        </div>
+      </div>
+
+      <section>
+        <h2>Documents</h2>
+
+        <form id="documents-form" class="admin-only">
+          <h3>Add Document Link</h3>
+          <div class="field">
+            <label for="doc-title">Document Title</label>
+            <input type="text" id="doc-title" required />
+          </div>
+          <div class="field">
+            <label for="doc-url">Document URL</label>
+            <input type="url" id="doc-url" placeholder="https://..." required />
+          </div>
+          <div class="field">
+            <label for="doc-description">Description (optional)</label>
+            <textarea id="doc-description"></textarea>
+          </div>
+          <button type="submit">Add Document</button>
+        </form>
+
+        <ul id="documents-list" class="item-list"></ul>
+      </section>
+    </main>
+  </div>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import {
+      getAuth,
+      onAuthStateChanged,
+      signInWithEmailAndPassword,
+      createUserWithEmailAndPassword,
+      signOut
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import {
+      getFirestore,
+      collection,
+      addDoc,
+      onSnapshot,
+      query,
+      orderBy,
+      serverTimestamp,
+      doc,
+      deleteDoc
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+    // 🔧 REPLACE WITH YOUR CONFIG
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_AUTH_DOMAIN",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_STORAGE_BUCKET",
+      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    const authOverlay = document.getElementById("auth-overlay");
+    const appShell = document.getElementById("app-shell");
+    const emailInput = document.getElementById("email-input");
+    const passwordInput = document.getElementById("password-input");
+    const loginBtn = document.getElementById("login-btn");
+    const signupBtn = document.getElementById("signup-btn");
+    const logoutBtn = document.getElementById("logout-btn");
+    const authInfoEl = document.getElementById("auth-info");
+    const roleBadgeContainer = document.getElementById("role-badge-container");
+    const adminOnlyEls = document.getElementsByClassName("admin-only");
+
+    const docsForm = document.getElementById("documents-form");
+    const docsList = document.getElementById("documents-list");
+    const docTitleInput = document.getElementById("doc-title");
+    const docUrlInput = document.getElementById("doc-url");
+    const docDescInput = document.getElementById("doc-description");
+
+    let currentUser = null;
+    let currentIsAdmin = false;
+
+    const ADMIN_UIDS = [
+      "l1TlAvSdW0hpZUPU5eA0XBWD2OA3"
+    ];
+
+    async function checkAdmin(user) {
+      if (!user) return false;
+      return ADMIN_UIDS.includes(user.uid);
+    }
+
+    function updateAdminUI() {
+      for (let i = 0; i < adminOnlyEls.length; i++) {
+        adminOnlyEls[i].style.display = currentIsAdmin ? "block" : "none";
+      }
+
+      if (currentUser) {
+        authOverlay.style.display = "none";
+        appShell.style.display = "block";
+        authInfoEl.textContent = `Signed in as ${currentUser.email}`;
+        roleBadgeContainer.innerHTML = `
+          <span class="badge ${currentIsAdmin ? "admin" : ""}">
+            ${currentIsAdmin ? "Admin" : "Viewer"}
+          </span>`;
+      } else {
+        authOverlay.style.display = "flex";
+        appShell.style.display = "none";
+      }
+    }
+
+    onAuthStateChanged(auth, async (user) => {
+      currentUser = user;
+      currentIsAdmin = await checkAdmin(user);
+      updateAdminUI();
+    });
+
+    loginBtn.addEventListener("click", async () => {
+      const email = emailInput.value.trim();
+      const pass = passwordInput.value.trim();
+      if (!email || !pass) return alert("Please enter email and password");
+      try {
+        await signInWithEmailAndPassword(auth, email, pass);
+        emailInput.value = "";
+        passwordInput.value = "";
+      } catch (e) {
+        alert("Login failed: " + e.message);
+      }
+    });
+
+    signupBtn.addEventListener("click", async () => {
+      const email = emailInput.value.trim();
+      const pass = passwordInput.value.trim();
+      if (!email || !pass) return alert("Please enter email and password");
+      try {
+        await createUserWithEmailAndPassword(auth, email, pass);
+        alert("Account created! You are a viewer by default.");
+        emailInput.value = "";
+        passwordInput.value = "";
+      } catch (e) {
+        alert("Signup failed: " + e.message);
+      }
+    });
+
+    logoutBtn.addEventListener("click", async () => {
+      await signOut(auth);
+    });
+
+    // Documents logic
+    docsForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      if (!currentIsAdmin) return alert("Only admins can add documents.");
+      const title = docTitleInput.value.trim();
+      const url = docUrlInput.value.trim();
+      const description = docDescInput.value.trim();
+      if (!title || !url) return alert("Title and URL required.");
+      try {
+        await addDoc(collection(db, "documents"), {
+          title,
+          url,
+          description,
+          createdAt: serverTimestamp()
+        });
+        docTitleInput.value = "";
+        docUrlInput.value = "";
+        docDescInput.value = "";
+      } catch (e) {
+        alert("Error adding document: " + e.message);
+      }
+    });
+
+    function renderDocuments(docs) {
+      docsList.innerHTML = "";
+      docs.forEach((docSnap) => {
+        const data = docSnap.data();
+        const created = data.createdAt?.toDate
+          ? data.createdAt.toDate().toLocaleString()
+          : "";
+        const li = document.createElement("li");
+        li.innerHTML = `
+          <strong><a href="${data.url}" target="_blank" rel="noopener noreferrer">
+            ${data.title || "Untitled"}
+          </a></strong>
+          <div class="meta">${created}</div>
+          <div>${data.description || ""}</div>
+        `;
+        if (currentIsAdmin) {
+          const btn = document.createElement("button");
+          btn.textContent = "Delete";
+          btn.className = "small-btn";
+          btn.onclick = async () => {
+            if (confirm("Delete this document?")) {
+              await deleteDoc(doc(db, "documents", docSnap.id));
+            }
+          };
+          li.appendChild(btn);
+        }
+        docsList.appendChild(li);
+      });
+    }
+
+    const docsQuery = query(
+      collection(db, "documents"),
+      orderBy("createdAt", "desc")
+    );
+    onSnapshot(docsQuery, (snapshot) => {
+      renderDocuments(snapshot.docs);
+    });
+  </script>
+</body>
+</html>
